# burrow

./: .gitignore  Cargo.toml  LICENSE  README.md  burrow.plugin.zsh  design.md  go.mod  go.sum  install.sh
.github/workflows/: cli.yml  release.yml
cmd/: main.go
cmd/burrow/: burrow.go  create.go  file_stat.go  update.go  version.go
cmd/command/: cli.go
cmd/command/streams/: in.go  out.go  stream.go
cmd/compatibility/: converter.go
cmd/prompt/: prompt.go
docs/: CODE-OF-CONDUCT.md  HOW-TO-CONTRIBUTE.md
internal/: init.go
internal/fs/: create_fs.go  file_stat.go  file_stat_darwin.go  file_stat_linux.go
internal/helper/: download_progress.go  utils.go
internal/paths/: paths.go
internal/shell/: inithook.go  shell.go
internal/sync/: update.go
pkg/: variables.go
pkg/formatter/: constants.go
pkg/utils/: string.go
src/: init.rs  main.rs  shell.rs
src/cmd/: burrow.rs  cli.rs  cmd.rs  mkdir.rs  mod.rs  operations.rs
templates/: bash.txt  zsh.txt
