[package]
authors = ["Evandro Lourenço Limeira <evan.limeira@gmail.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "A smarter mkdir -p/touch fusion"
homepage = "https://github.com/elaurentium/burrow"
keywords = ["cli", "filesystem", "shell", "tool", "utility"]
name = "burrow"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/elaurentium/burrow"

[dependencies]
anyhow = "1.0.98"
askama = { version="0.14.0", features = ["config"] }
cargo-deb = "3.4.1"
clap = { version = "4.0", features = ["derive"] }
fmt = "0.1.0"

[[bin]]
name = "burrow"
path = "src/main.rs"

[[bin]]
name = "b"
path = "src/main.rs"

[general]
dirs = ["templates"]

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-musl-gcc"

[package.metadata.deb]
assets = [
    [
        "target/release/burrow",
        "usr/bin/burrow",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/burrow/",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/burrow/",
        "644",
    ],
]
